# rust-pattern-matching

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/single_pattern/: bndm.rs  horspool.rs  mod.rs  naive.rs  shift_and.rs
